--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     
     <div class="obsah">
-        <h1>Jak navázat na bakalářské studium?</h1>
+        <h1>Unaveni přímou volbou?</h1>
 	
-<form> 
+<!-- <form> 
     <input type="checkbox"> Podat si přihlášku do 31. 3. <br>
     <input type="checkbox"> Vybrat si druhý program <br> 
     <input type="checkbox"> Přihlásit se k BZK do 10. 5. <br>
@@ -24,7 +24,7 @@
     <input type="checkbox"> Přijít 17. 6. na písemnou část BZK <br>
     <input type="checkbox"> Přijít 23. 6. na ústní část BZK <br>
     <input type="checkbox"> Přijít 24. 6. na obhajobu <br>
-</form>
+</form> -->
 		<div id="obor"></div>
 
 		<button class="tlacitko" onclick="vyberObor()">Vybrat program náhodně</button>
