--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 	<!-- <h2>Přihlásím se na:</h2>
 
 	<div id="seznam">Germánská a severoevropská studia: NEDERLANDISTIKA a ...</div> -->
-
+    <div class="link">Se svým novým oborem se můžete seznámit <a href="https://www.ff.cuni.cz/prijimaci-rizeni/studijni-obory/bakalarske-obory/#neucitel">zde</a></div>
 	</div>
 
+<!-- <div class="seznam">Vybraný obor</div> -->
 
 	<script src="index.js"></script>
 </body>
